# Building-e2e-google-adk-agent-applications---using-codelabs

./: README.md
1_Deep_Research_Agent/: README.md
2_Advance_Tool_agent/my-gemini-adk-agent/: .env.example  .gitignore  ARCHITECTURE.md  Advance_Tool_agent.code-workspace  DELIVERY_CHECKLIST.md  DEMO_CHEATSHEET.md  EXAMPLE_OUTPUT.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  VIDEO_DEMO_SCRIPT.md  VISUAL_DEMO_GUIDE.md  demo.py  demo_auto.py  pyproject.toml  setup.bat  simple_demo.py  simple_demo_auto.py  test_prompts.md  tool_agent.py
2_Advance_Tool_agent/my-gemini-adk-agent/app/: __init__.py  agent.py  server.py  tools.py
2_Advance_Tool_agent/my-gemini-adk-agent/deployment/: .dockerignore  Dockerfile  cloudbuild.yaml
2_Advance_Tool_agent/my-gemini-adk-agent/tests/: quick_test.py  test_agent.py
2_Advance_Tool_agent/my-gemini-agent/: README.md
2_Advance_Tool_agent/my-gemini-agent/app/: agent.py  tools.py
3_MCP_Tool_Agent/: MCP_BUG_ASSISTANT_OVERVIEW.md  PROJECT_SUMMARY.md  START_HERE.md
3_MCP_Tool_Agent/mcp_bug_assistant_clone/: INSTALLATION_VERIFICATION.md  QUICKSTART.md  README.md  bug_assistant.py  bug_report.json  demo_script.md  requirements.txt  sample_buggy_code.py  test_simple.py
3_MCP_Tool_Agent/mcp_bug_assistant_clone/outputs/: .gitkeep  test_report.json
4_Code_Review_Assistant/: README.md
5_Code_Review_Assistant/: README.md  tools.yaml
